force-app/main/default/objects/Export_Vehicle__c/Export_Vehicle__c.object-meta.xml
<CustomObject>
    <description>貿易システム側にIDは保持していない。
（会員ID、貿易担当や販売担当・OBIC入力担当の社員番号、国コード、港コードなど）
一時完了から1か月が経過したものは更新しない→貿易システムの負荷が大きくなるため。
貿易システム側は13時、16時、18時、23時に更新される。
DWHからは30分間隔で連携されているため、頻度を上げても対応は可能</description>
    <label>輸出車両管理</label>
    <nameField>
        <label>輸出車両管理</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>