force-app/main/default/objects/Export_Vehicle__c/fields/aac_auction_number__c.field-meta.xml
<CustomField>
    <fullName>aac_auction_number__c</fullName>
    <label>AAC出品番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>