force-app/main/default/objects/Export_Vehicle__c/fields/additional_photo_shooting__c.field-meta.xml
<CustomField>
    <fullName>additional_photo_shooting__c</fullName>
    <label>写真の追加撮影</label>
    <length>255</length>
    <type>Text</type>
</CustomField>