force-app/main/default/objects/Export_Vehicle__c/fields/admission_fee__c.field-meta.xml
<CustomField>
    <fullName>admission_fee__c</fullName>
    <description>要・不要が入る</description>
    <label>入会金</label>
    <length>255</length>
    <type>Text</type>
</CustomField>