force-app/main/default/objects/Export_Vehicle__c/fields/agency_classification__c.field-meta.xml
<CustomField>
    <fullName>agency_classification__c</fullName>
    <label>代行区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>