force-app/main/default/objects/Export_Vehicle__c/fields/arrangement_fee__c.field-meta.xml
<CustomField>
    <fullName>arrangement_fee__c</fullName>
    <label>手配料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>