force-app/main/default/objects/Export_Vehicle__c/fields/auction_classification__c.field-meta.xml
<CustomField>
    <fullName>auction_classification__c</fullName>
    <label>オークション区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>