force-app/main/default/objects/Export_Vehicle__c/fields/auction_data__c.field-meta.xml
<CustomField>
    <fullName>auction_data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>オークション出品データ</label>
    <referenceTo>Auction_Data__c</referenceTo>
    <relationshipLabel>輸出車両管理</relationshipLabel>
    <relationshipName>auction_data_trading</relationshipName>
    <type>Lookup</type>
</CustomField>