force-app/main/default/objects/Export_Vehicle__c/fields/bl_number__c.field-meta.xml
<CustomField>
    <fullName>bl_number__c</fullName>
    <label>B/L No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>