force-app/main/default/objects/Export_Vehicle__c/fields/bl_sent_date__c.field-meta.xml
<CustomField>
    <fullName>bl_sent_date__c</fullName>
    <label>B/L送付日</label>
    <type>Date</type>
</CustomField>