force-app/main/default/objects/Export_Vehicle__c/fields/booking_date__c.field-meta.xml
<CustomField>
    <fullName>booking_date__c</fullName>
    <label>ブッキング日</label>
    <type>Date</type>
</CustomField>