force-app/main/default/objects/Export_Vehicle__c/fields/booking_destination__c.field-meta.xml
<CustomField>
    <fullName>booking_destination__c</fullName>
    <label>ブッキング先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>