force-app/main/default/objects/Export_Vehicle__c/fields/booking_no__c.field-meta.xml
<CustomField>
    <fullName>booking_no__c</fullName>
    <label>ブッキングNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>