force-app/main/default/objects/Export_Vehicle__c/fields/broker_customs_forwarder__c.field-meta.xml
<CustomField>
    <fullName>broker_customs_forwarder__c</fullName>
    <label>業者（乙仲）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>