force-app/main/default/objects/Export_Vehicle__c/fields/buyer__c.field-meta.xml
<CustomField>
    <fullName>buyer__c</fullName>
    <label>売却先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>