force-app/main/default/objects/Export_Vehicle__c/fields/certificate_of_origin__c.field-meta.xml
<CustomField>
    <fullName>certificate_of_origin__c</fullName>
    <label>原産地証明書</label>
    <length>255</length>
    <type>Text</type>
</CustomField>