force-app/main/default/objects/Export_Vehicle__c/fields/chassis_number__c.field-meta.xml
<CustomField>
    <fullName>chassis_number__c</fullName>
    <label>車台番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>