force-app/main/default/objects/Export_Vehicle__c/fields/cleaning_request_date__c.field-meta.xml
<CustomField>
    <fullName>cleaning_request_date__c</fullName>
    <label>掃除依頼日</label>
    <type>Date</type>
</CustomField>