force-app/main/default/objects/Export_Vehicle__c/fields/complete_cut__c.field-meta.xml
<CustomField>
    <fullName>complete_cut__c</fullName>
    <label>丸車/カット</label>
    <length>255</length>
    <type>Text</type>
</CustomField>