force-app/main/default/objects/Export_Vehicle__c/fields/container_size__c.field-meta.xml
<CustomField>
    <fullName>container_size__c</fullName>
    <label>コンテナサイズ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>