force-app/main/default/objects/Export_Vehicle__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <label>国</label>
    <length>255</length>
    <type>Text</type>
</CustomField>