force-app/main/default/objects/Export_Vehicle__c/fields/current_registration__c.field-meta.xml
<CustomField>
    <fullName>current_registration__c</fullName>
    <label>現在登録</label>
    <length>255</length>
    <type>Text</type>
</CustomField>