force-app/main/default/objects/Export_Vehicle__c/fields/cut_fee__c.field-meta.xml
<CustomField>
    <fullName>cut_fee__c</fullName>
    <label>カット料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>