force-app/main/default/objects/Export_Vehicle__c/fields/cut_off_date__c.field-meta.xml
<CustomField>
    <fullName>cut_off_date__c</fullName>
    <label>カット日</label>
    <type>Date</type>
</CustomField>