force-app/main/default/objects/Export_Vehicle__c/fields/damage__c.field-meta.xml
<CustomField>
    <fullName>damage__c</fullName>
    <label>ダメージ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>