force-app/main/default/objects/Export_Vehicle__c/fields/degassing__c.field-meta.xml
<CustomField>
    <fullName>degassing__c</fullName>
    <label>ガス除去</label>
    <length>255</length>
    <type>Text</type>
</CustomField>