force-app/main/default/objects/Export_Vehicle__c/fields/departure_date__c.field-meta.xml
<CustomField>
    <fullName>departure_date__c</fullName>
    <label>出航日（出港日）</label>
    <type>Date</type>
</CustomField>