force-app/main/default/objects/Export_Vehicle__c/fields/departure_port__c.field-meta.xml
<CustomField>
    <fullName>departure_port__c</fullName>
    <label>出発港</label>
    <length>255</length>
    <type>Text</type>
</CustomField>