force-app/main/default/objects/Export_Vehicle__c/fields/deregistration_type__c.field-meta.xml
<CustomField>
    <fullName>deregistration_type__c</fullName>
    <label>抹消区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>