force-app/main/default/objects/Export_Vehicle__c/fields/destination_port__c.field-meta.xml
<CustomField>
    <fullName>destination_port__c</fullName>
    <label>向け地</label>
    <length>255</length>
    <type>Text</type>
</CustomField>