force-app/main/default/objects/Export_Vehicle__c/fields/dhl_not_required__c.field-meta.xml
<CustomField>
    <fullName>dhl_not_required__c</fullName>
    <label>DHL不要</label>
    <length>255</length>
    <type>Text</type>
</CustomField>