force-app/main/default/objects/Export_Vehicle__c/fields/dhl_sent_date__c.field-meta.xml
<CustomField>
    <fullName>dhl_sent_date__c</fullName>
    <label>DHL送付日</label>
    <type>Date</type>
</CustomField>