force-app/main/default/objects/Export_Vehicle__c/fields/dr_confirmation__c.field-meta.xml
<CustomField>
    <fullName>dr_confirmation__c</fullName>
    <label>D/R確認</label>
    <length>255</length>
    <type>Text</type>
</CustomField>