force-app/main/default/objects/Export_Vehicle__c/fields/drivable__c.field-meta.xml
<CustomField>
    <fullName>drivable__c</fullName>
    <label>自走</label>
    <length>255</length>
    <type>Text</type>
</CustomField>