force-app/main/default/objects/Export_Vehicle__c/fields/drivable_status__c.field-meta.xml
<CustomField>
    <fullName>drivable_status__c</fullName>
    <label>自走/不動</label>
    <length>255</length>
    <type>Text</type>
</CustomField>