force-app/main/default/objects/Export_Vehicle__c/fields/estimated_time_of_arrival__c.field-meta.xml
<CustomField>
    <fullName>estimated_time_of_arrival__c</fullName>
    <label>到着予定日（ETA）</label>
    <type>Date</type>
</CustomField>