force-app/main/default/objects/Export_Vehicle__c/fields/estimated_time_of_departure__c.field-meta.xml
<CustomField>
    <fullName>estimated_time_of_departure__c</fullName>
    <label>出発予定日（ETD）</label>
    <type>Date</type>
</CustomField>