force-app/main/default/objects/Export_Vehicle__c/fields/exclusion_deadline__c.field-meta.xml
<CustomField>
    <fullName>exclusion_deadline__c</fullName>
    <label>除外期日</label>
    <type>Date</type>
</CustomField>