force-app/main/default/objects/Export_Vehicle__c/fields/expenses_fee__c.field-meta.xml
<CustomField>
    <fullName>expenses_fee__c</fullName>
    <label>諸経費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>