force-app/main/default/objects/Export_Vehicle__c/fields/export_cancellation_date__c.field-meta.xml
<CustomField>
    <fullName>export_cancellation_date__c</fullName>
    <label>輸出抹消日</label>
    <type>Date</type>
</CustomField>