force-app/main/default/objects/Export_Vehicle__c/fields/export_cert_translation__c.field-meta.xml
<CustomField>
    <fullName>export_cert_translation__c</fullName>
    <label>輸抹英訳（全登英訳）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>