force-app/main/default/objects/Export_Vehicle__c/fields/first_registration_year_month__c.field-meta.xml
<CustomField>
    <fullName>first_registration_year_month__c</fullName>
    <label>初年度年/月</label>
    <length>255</length>
    <type>Text</type>
</CustomField>