force-app/main/default/objects/Export_Vehicle__c/fields/fob_additional_charge__c.field-meta.xml
<CustomField>
    <fullName>fob_additional_charge__c</fullName>
    <label>FOB（追加分）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>