force-app/main/default/objects/Export_Vehicle__c/fields/fob_adjustments__c.field-meta.xml
<CustomField>
    <fullName>fob_adjustments__c</fullName>
    <label>FOB関連調整</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>