force-app/main/default/objects/Export_Vehicle__c/fields/fob_price__c.field-meta.xml
<CustomField>
    <fullName>fob_price__c</fullName>
    <label>FOB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>