force-app/main/default/objects/Export_Vehicle__c/fields/gasoline_removal__c.field-meta.xml
<CustomField>
    <fullName>gasoline_removal__c</fullName>
    <label>ガソリン除去</label>
    <length>255</length>
    <type>Text</type>
</CustomField>