force-app/main/default/objects/Export_Vehicle__c/fields/has_plate__c.field-meta.xml
<CustomField>
    <fullName>has_plate__c</fullName>
    <label>ナンバー有無</label>
    <length>255</length>
    <type>Text</type>
</CustomField>