force-app/main/default/objects/Export_Vehicle__c/fields/high_fee__c.field-meta.xml
<CustomField>
    <fullName>high_fee__c</fullName>
    <label>高額手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>