force-app/main/default/objects/Export_Vehicle__c/fields/include_engine_number__c.field-meta.xml
<CustomField>
    <fullName>include_engine_number__c</fullName>
    <label>エンジン番号記載</label>
    <length>255</length>
    <type>Text</type>
</CustomField>