force-app/main/default/objects/Export_Vehicle__c/fields/inspection_completion_date__c.field-meta.xml
<CustomField>
    <fullName>inspection_completion_date__c</fullName>
    <label>検査完了日</label>
    <type>Date</type>
</CustomField>