force-app/main/default/objects/Export_Vehicle__c/fields/inspection_fee__c.field-meta.xml
<CustomField>
    <fullName>inspection_fee__c</fullName>
    <description>要・不要が入る</description>
    <label>検査費用</label>
    <length>255</length>
    <type>Text</type>
</CustomField>