force-app/main/default/objects/Export_Vehicle__c/fields/inspection_not_required__c.field-meta.xml
<CustomField>
    <fullName>inspection_not_required__c</fullName>
    <label>検査不要</label>
    <length>255</length>
    <type>Text</type>
</CustomField>