force-app/main/default/objects/Export_Vehicle__c/fields/inspection_request_date__c.field-meta.xml
<CustomField>
    <fullName>inspection_request_date__c</fullName>
    <label>検査依頼日</label>
    <type>Date</type>
</CustomField>