force-app/main/default/objects/Export_Vehicle__c/fields/insurance_procedure_date__c.field-meta.xml
<CustomField>
    <fullName>insurance_procedure_date__c</fullName>
    <label>保険手続日</label>
    <type>Date</type>
</CustomField>