force-app/main/default/objects/Export_Vehicle__c/fields/insurance_required__c.field-meta.xml
<CustomField>
    <fullName>insurance_required__c</fullName>
    <label>保険要否</label>
    <length>255</length>
    <type>Text</type>
</CustomField>