force-app/main/default/objects/Export_Vehicle__c/fields/land_transport_cleaning__c.field-meta.xml
<CustomField>
    <fullName>land_transport_cleaning__c</fullName>
    <label>陸送/掃除</label>
    <length>255</length>
    <type>Text</type>
</CustomField>