force-app/main/default/objects/Export_Vehicle__c/fields/land_transport_scheduled_date__c.field-meta.xml
<CustomField>
    <fullName>land_transport_scheduled_date__c</fullName>
    <label>陸送予定日</label>
    <type>Date</type>
</CustomField>