force-app/main/default/objects/Export_Vehicle__c/fields/land_transportation_cost__c.field-meta.xml
<CustomField>
    <fullName>land_transportation_cost__c</fullName>
    <label>陸送費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>