force-app/main/default/objects/Export_Vehicle__c/fields/last_updated_at__c.field-meta.xml
<CustomField>
    <fullName>last_updated_at__c</fullName>
    <label>貿易システム　最終更新日時</label>
    <type>DateTime</type>
</CustomField>