force-app/main/default/objects/Export_Vehicle__c/fields/lc_amount__c.field-meta.xml
<CustomField>
    <fullName>lc_amount__c</fullName>
    <label>LC金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>