force-app/main/default/objects/Export_Vehicle__c/fields/lc_fee__c.field-meta.xml
<CustomField>
    <fullName>lc_fee__c</fullName>
    <description>要・不要が入る</description>
    <label>LC手数料</label>
    <length>255</length>
    <type>Text</type>
</CustomField>