force-app/main/default/objects/Export_Vehicle__c/fields/lc_interest_rate__c.field-meta.xml
<CustomField>
    <fullName>lc_interest_rate__c</fullName>
    <label>LC金利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>