force-app/main/default/objects/Export_Vehicle__c/fields/lc_number__c.field-meta.xml
<CustomField>
    <fullName>lc_number__c</fullName>
    <label>LC番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>