force-app/main/default/objects/Export_Vehicle__c/fields/lc_total_count__c.field-meta.xml
<CustomField>
    <fullName>lc_total_count__c</fullName>
    <label>LC合計件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>