force-app/main/default/objects/Export_Vehicle__c/fields/listing_memo__c.field-meta.xml
<CustomField>
    <fullName>listing_memo__c</fullName>
    <label>出品メモ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>