force-app/main/default/objects/Export_Vehicle__c/fields/lot_num__c.field-meta.xml
<CustomField>
    <fullName>lot_num__c</fullName>
    <externalId>true</externalId>
    <label>ロット番号</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>