force-app/main/default/objects/Export_Vehicle__c/fields/maintenance_note__c.field-meta.xml
<CustomField>
    <fullName>maintenance_note__c</fullName>
    <label>メンテナンスノート</label>
    <length>255</length>
    <type>Text</type>
</CustomField>