force-app/main/default/objects/Export_Vehicle__c/fields/maker__c.field-meta.xml
<CustomField>
    <fullName>maker__c</fullName>
    <label>メーカー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>