force-app/main/default/objects/Export_Vehicle__c/fields/manual_maintenance_warranty__c.field-meta.xml
<CustomField>
    <fullName>manual_maintenance_warranty__c</fullName>
    <label>トリメンポ送付</label>
    <length>255</length>
    <type>Text</type>
</CustomField>