force-app/main/default/objects/Export_Vehicle__c/fields/marine_insurance__c.field-meta.xml
<CustomField>
    <fullName>marine_insurance__c</fullName>
    <label>海上保険</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>