force-app/main/default/objects/Export_Vehicle__c/fields/negotiation_fee__c.field-meta.xml
<CustomField>
    <fullName>negotiation_fee__c</fullName>
    <label>商談手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>