force-app/main/default/objects/Export_Vehicle__c/fields/obic_input_representative__c.field-meta.xml
<CustomField>
    <fullName>obic_input_representative__c</fullName>
    <label>OBIC入力担当</label>
    <length>255</length>
    <type>Text</type>
</CustomField>