force-app/main/default/objects/Export_Vehicle__c/fields/ocean_freight_function_adjustments__c.field-meta.xml
<CustomField>
    <fullName>ocean_freight_function_adjustments__c</fullName>
    <label>海上運賃関数調整</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>