force-app/main/default/objects/Export_Vehicle__c/fields/ocean_freight_separate_billing__c.field-meta.xml
<CustomField>
    <fullName>ocean_freight_separate_billing__c</fullName>
    <description>要・不要が入る</description>
    <label>海上運賃別途請求</label>
    <length>255</length>
    <type>Text</type>
</CustomField>