force-app/main/default/objects/Export_Vehicle__c/fields/other_amount__c.field-meta.xml
<CustomField>
    <fullName>other_amount__c</fullName>
    <label>その他（金額）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>