force-app/main/default/objects/Export_Vehicle__c/fields/other_delayed_items__c.field-meta.xml
<CustomField>
    <fullName>other_delayed_items__c</fullName>
    <label>その他　後送品</label>
    <length>255</length>
    <type>Text</type>
</CustomField>