force-app/main/default/objects/Export_Vehicle__c/fields/other_details__c.field-meta.xml
<CustomField>
    <fullName>other_details__c</fullName>
    <label>その他（内容）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>