force-app/main/default/objects/Export_Vehicle__c/fields/other_requests__c.field-meta.xml
<CustomField>
    <fullName>other_requests__c</fullName>
    <label>その他依頼事項</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>