force-app/main/default/objects/Export_Vehicle__c/fields/owners_manual__c.field-meta.xml
<CustomField>
    <fullName>owners_manual__c</fullName>
    <label>取扱説明書</label>
    <length>255</length>
    <type>Text</type>
</CustomField>