force-app/main/default/objects/Export_Vehicle__c/fields/parts_loading__c.field-meta.xml
<CustomField>
    <fullName>parts_loading__c</fullName>
    <label>部品積込</label>
    <length>255</length>
    <type>Text</type>
</CustomField>