force-app/main/default/objects/Export_Vehicle__c/fields/payment_classification__c.field-meta.xml
<CustomField>
    <fullName>payment_classification__c</fullName>
    <label>支払い区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>