force-app/main/default/objects/Export_Vehicle__c/fields/payment_date__c.field-meta.xml
<CustomField>
    <fullName>payment_date__c</fullName>
    <label>着金日</label>
    <type>Date</type>
</CustomField>