force-app/main/default/objects/Export_Vehicle__c/fields/payment_method__c.field-meta.xml
<CustomField>
    <fullName>payment_method__c</fullName>
    <label>支払い方法</label>
    <length>255</length>
    <type>Text</type>
</CustomField>