force-app/main/default/objects/Export_Vehicle__c/fields/payment_remittance_transfer__c.field-meta.xml
<CustomField>
    <fullName>payment_remittance_transfer__c</fullName>
    <label>入金前回送</label>
    <length>255</length>
    <type>Text</type>
</CustomField>