force-app/main/default/objects/Export_Vehicle__c/fields/permit_confirmation__c.field-meta.xml
<CustomField>
    <fullName>permit_confirmation__c</fullName>
    <label>許可証確認</label>
    <length>255</length>
    <type>Text</type>
</CustomField>