force-app/main/default/objects/Export_Vehicle__c/fields/price_terms__c.field-meta.xml
<CustomField>
    <fullName>price_terms__c</fullName>
    <label>建値</label>
    <length>255</length>
    <type>Text</type>
</CustomField>