force-app/main/default/objects/Export_Vehicle__c/fields/recycle_deposit_status__c.field-meta.xml
<CustomField>
    <fullName>recycle_deposit_status__c</fullName>
    <label>預託状況</label>
    <length>255</length>
    <type>Text</type>
</CustomField>