force-app/main/default/objects/Export_Vehicle__c/fields/reinforced_lashing__c.field-meta.xml
<CustomField>
    <fullName>reinforced_lashing__c</fullName>
    <label>強化ラッシング</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>