force-app/main/default/objects/Export_Vehicle__c/fields/repair_vendor__c.field-meta.xml
<CustomField>
    <fullName>repair_vendor__c</fullName>
    <label>修理業者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>