force-app/main/default/objects/Export_Vehicle__c/fields/revision_history_memo__c.field-meta.xml
<CustomField>
    <fullName>revision_history_memo__c</fullName>
    <label>修正履歴・メモ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>