force-app/main/default/objects/Export_Vehicle__c/fields/sale_date__c.field-meta.xml
<CustomField>
    <fullName>sale_date__c</fullName>
    <label>売却日</label>
    <type>Date</type>
</CustomField>