force-app/main/default/objects/Export_Vehicle__c/fields/sales_date__c.field-meta.xml
<CustomField>
    <fullName>sales_date__c</fullName>
    <description>期日除外→除外期日に変更</description>
    <label>売上日</label>
    <type>Date</type>
</CustomField>