force-app/main/default/objects/Export_Vehicle__c/fields/sales_representative__c.field-meta.xml
<CustomField>
    <fullName>sales_representative__c</fullName>
    <label>販売担当</label>
    <length>255</length>
    <type>Text</type>
</CustomField>