force-app/main/default/objects/Export_Vehicle__c/fields/saved_records__c.field-meta.xml
<CustomField>
    <fullName>saved_records__c</fullName>
    <label>保存記録</label>
    <length>255</length>
    <type>Text</type>
</CustomField>