force-app/main/default/objects/Export_Vehicle__c/fields/scheduled_contact_date__c.field-meta.xml
<CustomField>
    <fullName>scheduled_contact_date__c</fullName>
    <label>予定連絡日</label>
    <type>Date</type>
</CustomField>