force-app/main/default/objects/Export_Vehicle__c/fields/seating_capacity__c.field-meta.xml
<CustomField>
    <fullName>seating_capacity__c</fullName>
    <description>2（4）のような表記があるため、テキスト項目</description>
    <label>定員</label>
    <length>255</length>
    <type>Text</type>
</CustomField>