force-app/main/default/objects/Export_Vehicle__c/fields/separate_transport_fee_input__c.field-meta.xml
<CustomField>
    <fullName>separate_transport_fee_input__c</fullName>
    <label>陸送費別入力</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>