force-app/main/default/objects/Export_Vehicle__c/fields/shaken_status__c.field-meta.xml
<CustomField>
    <fullName>shaken_status__c</fullName>
    <label>車検の有無</label>
    <length>255</length>
    <type>Text</type>
</CustomField>