force-app/main/default/objects/Export_Vehicle__c/fields/shipping_broker_name__c.field-meta.xml
<CustomField>
    <fullName>shipping_broker_name__c</fullName>
    <label>乙仲名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>