force-app/main/default/objects/Export_Vehicle__c/fields/shipping_docs_sent_date__c.field-meta.xml
<CustomField>
    <fullName>shipping_docs_sent_date__c</fullName>
    <label>船積書類送付日</label>
    <type>Date</type>
</CustomField>