force-app/main/default/objects/Export_Vehicle__c/fields/signature_certificate__c.field-meta.xml
<CustomField>
    <fullName>signature_certificate__c</fullName>
    <label>サイン証明</label>
    <length>255</length>
    <type>Text</type>
</CustomField>