force-app/main/default/objects/Export_Vehicle__c/fields/special_notes__c.field-meta.xml
<CustomField>
    <fullName>special_notes__c</fullName>
    <label>特記事項</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>