force-app/main/default/objects/Export_Vehicle__c/fields/split_invoice__c.field-meta.xml
<CustomField>
    <fullName>split_invoice__c</fullName>
    <label>請求書2分割</label>
    <length>255</length>
    <type>Text</type>
</CustomField>