force-app/main/default/objects/Export_Vehicle__c/fields/stock_num__c.field-meta.xml
<CustomField>
    <fullName>stock_num__c</fullName>
    <label>管理番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>