force-app/main/default/objects/Export_Vehicle__c/fields/storage_arrival_schedule__c.field-meta.xml
<CustomField>
    <fullName>storage_arrival_schedule__c</fullName>
    <label>入庫予定日</label>
    <type>Date</type>
</CustomField>