force-app/main/default/objects/Export_Vehicle__c/fields/storage_location__c.field-meta.xml
<CustomField>
    <fullName>storage_location__c</fullName>
    <label>置場</label>
    <length>255</length>
    <type>Text</type>
</CustomField>