force-app/main/default/objects/Export_Vehicle__c/fields/temp_completion_date__c.field-meta.xml
<CustomField>
    <fullName>temp_completion_date__c</fullName>
    <inlineHelpText>この日付から1か月を経過したものは更新対象から除外されます。</inlineHelpText>
    <label>一時完了日</label>
    <type>Date</type>
</CustomField>