force-app/main/default/objects/Export_Vehicle__c/fields/thc__c.field-meta.xml
<CustomField>
    <fullName>thc__c</fullName>
    <label>THC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>