force-app/main/default/objects/Export_Vehicle__c/fields/tracking_noA__c.field-meta.xml
<CustomField>
    <fullName>tracking_noA__c</fullName>
    <label>送り状NoA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>