force-app/main/default/objects/Export_Vehicle__c/fields/tracking_noB__c.field-meta.xml
<CustomField>
    <fullName>tracking_noB__c</fullName>
    <label>送り状NoB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>