force-app/main/default/objects/Export_Vehicle__c/fields/trade_representative__c.field-meta.xml
<CustomField>
    <fullName>trade_representative__c</fullName>
    <label>貿易担当</label>
    <length>255</length>
    <type>Text</type>
</CustomField>