force-app/main/default/objects/Export_Vehicle__c/fields/transit_yard_name__c.field-meta.xml
<CustomField>
    <fullName>transit_yard_name__c</fullName>
    <label>中継ヤード名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>