force-app/main/default/objects/Export_Vehicle__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>型式</label>
    <length>255</length>
    <type>Text</type>
</CustomField>