force-app/main/default/objects/Export_Vehicle__c/fields/usd_invoice__c.field-meta.xml
<CustomField>
    <fullName>usd_invoice__c</fullName>
    <label>ドル請求書</label>
    <length>255</length>
    <type>Text</type>
</CustomField>