force-app/main/default/objects/Export_Vehicle__c/fields/vehicle_base_price__c.field-meta.xml
<CustomField>
    <fullName>vehicle_base_price__c</fullName>
    <label>車台本体価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>