force-app/main/default/objects/Export_Vehicle__c/fields/vehicle_classification__c.field-meta.xml
<CustomField>
    <fullName>vehicle_classification__c</fullName>
    <label>車両区分</label>
    <length>255</length>
    <type>Text</type>
</CustomField>