force-app/main/default/objects/Export_Vehicle__c/fields/venue_info__c.field-meta.xml
<CustomField>
    <fullName>venue_info__c</fullName>
    <label>会場情報</label>
    <length>255</length>
    <type>Text</type>
</CustomField>