force-app/main/default/objects/Export_Vehicle__c/fields/vessel_name__c.field-meta.xml
<CustomField>
    <fullName>vessel_name__c</fullName>
    <label>船名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>