force-app/main/default/objects/Export_Vehicle__c/fields/warranty__c.field-meta.xml
<CustomField>
    <fullName>warranty__c</fullName>
    <label>保証書</label>
    <length>255</length>
    <type>Text</type>
</CustomField>