force-app/main/default/objects/Export_Vehicle__c/fields/winning_fee__c.field-meta.xml
<CustomField>
    <fullName>winning_fee__c</fullName>
    <label>落札手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>