force-app/main/default/objects/Export_Vehicle__c/fields/work_request_date__c.field-meta.xml
<CustomField>
    <fullName>work_request_date__c</fullName>
    <label>作業依頼日</label>
    <type>Date</type>
</CustomField>