force-app/main/default/objects/Export_Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>country__c</columns>
    <columns>destination_port__c</columns>
    <columns>auction_data__c</columns>
    <columns>model__c</columns>
    <columns>chassis_number__c</columns>
    <columns>bl_number__c</columns>
    <columns>booking_date__c</columns>
    <columns>lot_num__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>